<resources>
    <string name="app_name">个人闹钟</string>
    <string name="app_study">学习</string>
    <string name="app_list">任务</string>
    <string name="app_alarm">闹钟</string>
    <string name="app_me">个人</string>
    <string name="study_start">开始做题</string>
    <string name="time_start">开始任务</string>
    <string name="back">返回</string>
    <string name="answer">答题模式</string>
    <string name="last_question">上一题</string>
    <string name="question_list">题目列表</string>
    <string name="error_question">错题本</string>
    <string name="next_question">下一题</string>
    <string name="single_question">(单选题)</string>

    <!-- 闹钟界面-->
    <string name="alarm_title">闹钟标题</string>
    <string name="alarm_dec">闹钟描述</string>
    <string name="alarm_set_time">设置闹钟时间</string>

    <!-- 个人登录界面-->
    <string name="title_login_register">登录/注册</string>
    <string name="title_reset_password">重置密码</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_new_password">请输入新密码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="url_add_qq_group"><![CDATA[https://qm.qq.com/cgi-bin/qm/qr?k=0lUqsbfHTNDbS2KK4nTPwPq07tOqAk6J&authKey=4PzQ2cQYIr28Qyg%2FkTk%2BmI7xlcq8B0IZKZGc1H3XloRrCDBO8az97DIsBHnQW0Ya]]></string>

</resources>