<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/little_grey"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AnswerActivity">
    <!--    状态栏-->
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/back"
                android:layout_margin="10dp"
                android:background="@mipmap/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/back" />
        </LinearLayout>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:text="@string/answer"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="100dp"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@mipmap/time"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12:01"/>
        </LinearLayout>
    </LinearLayout>
    <!--答题区-->
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--题目内容-->
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_question" />
            <TextView
                android:id="@+id/question_title"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <!-- 选择区域 -->
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/choose_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/choose_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/choose_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/choose_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <!--  底部功能区 -->
    <LinearLayout
        android:background="@color/primary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <!--上一题-->
        <LinearLayout
            android:id="@+id/last_question"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@mipmap/last"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_question" />
        </LinearLayout>
        <!--  题目列表-->
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@mipmap/list"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_list" />
        </LinearLayout>
        <!--  我的收藏-->
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@mipmap/error"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_question" />
        </LinearLayout>
        <!--  下一题-->
        <LinearLayout
            android:id="@+id/next_question"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@mipmap/next_icon"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_question" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>